# koiruka-judgejun-2023

./: .gitignore  .ignore  Cargo.toml  NOTE.md  README.md  Shuttle.toml  lindera_ipadic_conf.json
api/lib/: Cargo.toml
api/lib/src/: chatgpt.rs  keitaiso.rs  lib.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: liejudge_chatgpt.rs  main.rs
data_processing/: Cargo.toml
data_processing/src/: lib.rs  main.rs
keitaiso/: Cargo.toml
keitaiso/src/: main.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
