[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1.26.0"

lindera-tokenizer = "*"
lindera-dictionary = "*"
lindera-core = "*"
lindera-analyzer = { version = "0.27.0", features = ["ipadic", "ipadic-filter"] }

# api-lib = {path = "../lib"}